[package]
name = "sdre-stubborn-io"
version = "0.5.10"
authors = ["David Raifaizen <david.raifaizen@protonmail.com>", "Fred Clausen"]
edition = "2021"
description = "Forked from https://github.com/craftytrickster/stubborn-io. io traits/structs that automatically recover from potential disconnections/interruptions."
license = "MIT"
keywords = ["reconnect", "retry", "stubborn", "io", "StubbornTcpStream"]
repository = "https://github.com/sdr-enthusiasts/sdre-stubborn-io"
documentation = "https://docs.rs/sdre-stubborn-io"
readme = "README.md"

[dependencies]
tokio = { version = "1.41.0", features = ["time", "net"] }
log = "0.4.22"
rand = "0.8.5"

[dev-dependencies]
tokio = { version = "1.41.0", features = ["macros", "rt", "fs", "io-util"] }
tokio-util = { version = "0.7.12", features = ["codec"] }
futures = "0.3.31"
