[package]
name = "sdre-stubborn-io"
version = "0.6.11"
authors = ["David Raifaizen <david.raifaizen@protonmail.com>", "Fred Clausen"]
edition = "2021"
description = "Forked from https://github.com/craftytrickster/stubborn-io. io traits/structs that automatically recover from potential disconnections/interruptions."
license = "MIT"
keywords = ["reconnect", "retry", "stubborn", "io", "StubbornTcpStream"]
repository = "https://github.com/sdr-enthusiasts/sdre-stubborn-io"
documentation = "https://docs.rs/sdre-stubborn-io"
readme = "README.md"

[dependencies]
tokio = { version = "1.47.1", features = ["time", "net"] }
log = "0.4.27"
rand = "0.9.2"

[dev-dependencies]
tokio = { version = "1.47.1", features = ["macros", "rt", "fs", "io-util"] }
tokio-util = { version = "0.7.16", features = ["codec"] }
futures = "0.3.31"
